[housekeeping] delete database.yml and add gitignores
for that, .DS_Store and .idea

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,10 @@
 # Ignore all logfiles and tempfiles.
 /log/*.log
 /tmp
+
+# Don't check in database credentials
+/config/database.yml
+# Ignore RubyMine metadata
+/.idea
+# Mac OS X files
+.DS_Store
