--- a/spec/javascripts/support/jasmine.yml
+++ b/spec/javascripts/support/jasmine.yml
@@ -11,12 +11,10 @@
 #   - dist/**/*.js
 #
 src_files:
-  - public/javascripts/prototype.js
-  - public/javascripts/effects.js
-  - public/javascripts/controls.js
-  - public/javascripts/dragdrop.js
-  - public/javascripts/application.js
-  - public/javascripts/**/*.js
+  - vendor/assets/javascripts/jquery.js
+  - vendor/assets/javascripts/jquery-ui.js
+  - vendor/assets/javascripts/jquery_ujs.js
+  - app/assets/javascripts/**/*.js
 
 # stylesheets
 #
